@@ -1,3 +1,10 @@
+phpmd-0.2.8 (2010/11/25)
+========================
+
+- Improved help text for the PHPMD command line. Thanks to Volker
+  Dusch for this contribution. https://github.com/edorian/phpmd
+- PHPMD is now compatible with next PHP_Depend release 0.10.0
+
 phpmd-0.2.7 (2010/09/01)
 ========================
 
